--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=libratum
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=pers4619_libratumuajm
+DB_USERNAME=pers4619_libratumuajm
+DB_PASSWORD=libratumpersuajm_2019
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
